outline of version control

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -1,71 +1,45 @@
-# Version control with GitHub {#GitHub}
+# Using Version control for collaboration {#version_control}
 
-![](img/Page_Under_Construction.png)
-image source: https://en.wikipedia.org/wiki/File:Page_Under_Construction.png
-
-## Overview 
-We will be using version control with GitHub and Git to share our code on group projects. Here is a list of videos you might want to watch to familiarize yourself further with these tools, as well as a cheatsheet of Git and terminal commands.
-
-## Videos to learn about version control with GitHub and Git
-
-### Creating a GitHub repository
-<iframe width="840" height="473" src="https://www.youtube.com/embed/HWR4IFV3n9s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-### Exploring a GitHub repository
-<iframe width="840" height="473" src="https://www.youtube.com/embed/R8OAwrcMlRw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-### Directly editing files on GitHub
-<iframe width="840" height="473" src="https://www.youtube.com/embed/uE2DxUfZjtE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-### Logging changes and pushing them to GitHub
-<iframe width="840" height="473" src="https://www.youtube.com/embed/SIe-BBcfHcU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+## Overview
 
 
-## Git command cheatsheet
+## Chapter learning objectives
+By the end of the chapter, students will be able to:
 
-Because we are writing code on a server, we need to use Git in the terminal to get files from GitHub, and to send back changes to the files that we make on the server. Below is a cheat sheet of the commands you will need and what they are for:
+- Describe what version control is and why data analysis projects can benefit 
+from using it
+- Create a remote version control repository on GitHub.com
+- Move changes to files from GitHub to JupyterHub, and from JupyterHub to GitHub
+- Use best practices for collaboration when using version control to collaborate 
+on a project with others
 
-### Getting a repository from GitHub onto the server for the first time
-*This is done only once for a repository when you want to copy it to a new computer.*
-```
-git clone https://github.com/USERNAME/GITHUB_REPOSITORY_NAME.git
-```
+## What is version control and why should I use it?
 
-### Logging changes
-After editing and saving your files (e.g., a Jupyter notebook):
-```
-git add FILENAME
-git commit -m "some message about the changes you made"
-```
+> Below is copied from https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745 and needs to be paraphrased
+> "A VCS stores snapshots of a project's files in a repository (or a set of repositories). Programmers can modify their working copy of the project at will, then commit changes to the repository when they are satisfied with the results to share them with colleagues. Crucially, if several people have edited files simultaneously, the VCS highlights the differences and requires them to resolve any conflicts before accepting the changes. The VCS also stores the entire history of those files, allowing arbitrary versions to be retrieved and compared, together with metadata such as comments on what was changed and the author of the changes. All of this information can be extracted to provide provenance for both code and data"
 
-### Sending your changes back to GitHub
-After logging your changes (as shown above):
-```
-git push
-```
+Version control helps solve these challenges in analysis projects, particularly 
+those that involve code, by facilitating tracking changes to code and data over 
+the lifespan of a project, allowing reversion to earlier versions or states of the 
+project and merging changes from collaborators [@wilson2014best]. 
 
-### Getting changes
-To get the changes your collaborator just sent to GitHub onto your server:
-```
-git pull
-```
+You might find yourself saying, but I am not collaborating, so I don't need to 
+use or learn version control. However, as this popular data science quote 
+aptly points out, future you often has to collaborate with past you.
 
-## Terminal cheatsheet
+*You mostly collaborate with yourself, and me-from-two-months-ago never responds to email*
 
-We need to run the above Git commands from inside the repository/folder that we cloned from GitHub. To navigate there in the terminal, you will need to use the following commands:
+-- Mark T. Holder
 
-### See where you are:
-```
-pwd
-```
+## Creating a space to share your code online
 
-### See what is inside the directory where you are:
-```
-ls
-```
 
-### Move to a different directory
-```
-cd DIRECTORY_PATH
-```
+## Moving changes from GitHub to JupyterHub
+
+
+## Bringing changes from JupyterHub to GitHub
+
+
+## Strategies for collaboration when using version control
+
 
