--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ author:
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [sources.bib]
+bibliography: [references.bib]
 biblio-style: apalike
 link-citations: yes
 description: "This is an open source textbook for teaching introductory data science."
