--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -15,12 +15,26 @@ on a project with others
 
 ## What is version control and why should I use it?
 
-> Below is copied from https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745 and needs to be paraphrased
-> "A VCS stores snapshots of a project's files in a repository (or a set of repositories). Programmers can modify their working copy of the project at will, then commit changes to the repository when they are satisfied with the results to share them with colleagues. Crucially, if several people have edited files simultaneously, the VCS highlights the differences and requires them to resolve any conflicts before accepting the changes. The VCS also stores the entire history of those files, allowing arbitrary versions to be retrieved and compared, together with metadata such as comments on what was changed and the author of the changes. All of this information can be extracted to provide provenance for both code and data"
+Good data analysis projects require iteration and revision to move from project
+ideation, to proof-of-concept to a finished product that is ready to be 
+communicated to and consumed by others not directly involved in the analysis 
+project. Without deliberate and conscious effort towards tracking which version
+of the analysis code led to which version of the results, data analysis projects
+can quickly and easily become messy and results irreproducible. Additionally,
+the iterative nature of data analysis projects means that there are usually 
+several times in a project where one would like to go back to an earlier version
+of a code file, or state of the project to experiment or test things. Finally,
+data analysis projects are rarely completed by a single person alone, and 
+instead teams of people typically collaborate - meaning that files need to be 
+shared across multiple computers, and multiple people usually end up editing a
+single file. In such a situation - determining which version of that file is 
+the latest and most up to date can be a challenge, especially when two people 
+are working on the same file at once!
 
 Version control helps solve these challenges in analysis projects, particularly 
-those that involve code, by facilitating tracking changes to code and data over 
-the lifespan of a project, allowing reversion to earlier versions or states of the 
+those that involve code, by tracking changes to code and data over 
+the lifespan of a project (including when the changes were made and who made 
+them), allowing reversion to earlier versions or states of the 
 project and merging changes from collaborators [@wilson2014best]. 
 
 You might find yourself saying, but I am not collaborating, so I don't need to 
