--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -16,26 +16,30 @@ on a project with others
 ## What is version control and why should I use it?
 
 Good data analysis projects require iteration and revision to move from project
-ideation, to proof-of-concept to a finished product that is ready to be 
-communicated to and consumed by others not directly involved in the analysis 
-project. Without deliberate and conscious effort towards tracking which version
-of the analysis code led to which version of the results, data analysis projects
-can quickly and easily become messy and results irreproducible. Additionally,
+ideation, through proof-of-concept to a finished product that is ready to be 
+communicated to the intended audience. Without deliberate and 
+conscious effort towards tracking which version of the analysis code led to 
+which version of the results, data analysis projects can quickly and easily 
+become messy, and the results irreproducible. Additionally,
 the iterative nature of data analysis projects means that there are usually 
 several times in a project where one would like to go back to an earlier version
-of a code file, or state of the project to experiment or test things. Finally,
+of a code file, or back in time to an earlier state of the project to experiment 
+or test things. Finally,
 data analysis projects are rarely completed by a single person alone, and 
-instead teams of people typically collaborate - meaning that files need to be 
+instead teams of people typically collaborate. This means that files need to be 
 shared across multiple computers, and multiple people usually end up editing a
-single file. In such a situation - determining which version of that file is 
-the latest and most up to date can be a challenge, especially when two people 
+single file. In such a situation, determining which version of that file is 
+the latest and most up to date can be a challenge - especially when two people 
 are working on the same file at once!
 
 Version control helps solve these challenges in analysis projects, particularly 
 those that involve code, by tracking changes to code and data over 
 the lifespan of a project (including when the changes were made and who made 
-them), allowing reversion to earlier versions or states of the 
-project and merging changes from collaborators [@wilson2014best]. 
+them). Version control also provides means to retreive earlier versions of a 
+file (or files), or even go back in time to earlier states of the 
+project. Finally, it also facilitates the merging changes from different
+collaborators working on the project - even when they are working on the same 
+file [@wilson2014best]!
 
 You might find yourself saying, but I am not collaborating, so I don't need to 
 use or learn version control. However, as this popular data science quote 
