revised language to make it more appropriate for ugrad ds project

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -56,9 +56,20 @@ aptly points out, future you often has to collaborate with past you.
 
 ## Creating a space to share your code online
 
-A repository on [GitHub.com](https://github.com/) can used to host and share 
-your analysis code and reports with your collaborators, as well as your 
-project's intended audience.
+[GitHub](https://github.com/) is an example of a remote version control 
+repository and Internet hosting service that software developers, and data 
+scientists use to archive and share their projects. It has controls that allow
+users to selectively share their work at various levels of permissions with 
+collaborators as well as your project's intended audience. It interfaces with 
+local version control systems on a laptop or JupyterHub server, so that files 
+(including ones that contain code!) can be easily transferred and shared. 
+Projects live in GitHub in a space called a repository. We will demonstrate now 
+how to create such a space on for your data analysis project.
+
+> Other examples of remote version control repository and Internet hosting 
+> services include [GitLab](https://gitlab.com/) and 
+> [Bitbucket](https://bitbucket.org/). Here we will focus on GitHub because it is 
+> currently the most widely-used platform.
 
 Before you can create repositories, you will need a 
 [GitHub.com](https://github.com/) account. You can sign up for a free account 
@@ -78,6 +89,11 @@ On the next page, do the following:
 - [ ] Select "Public"
 - [ ] Select "Initialize this repository with a README"
 - [ ] click on the green "Create Repository" button
+
+> By clicking "Public" your repository is viewable by anyone, however, only you, 
+and any collaborators you specify have permission to create or edit files. If 
+you have a project that needs to be kept private, you can instead select 
+"Private" when creating a repository.
 
 ```{r new_repository_02}
 include_graphics("img/version_control/new_repository_02.png")
@@ -100,8 +116,8 @@ useful to be able to connect the course repository that was created on
 your local computer, or using a JupyterHub. Given that we use a JupyterHub with 
 this course, we will here show how to do this using a JupyterHub.
 
-We will be using a Jupyter lab git extension tool to clone our 
-[GitHub.com](https://github.com/) course repository to the UBC JupyterHub. 
+We will be using a Jupyter lab git extension tool to bring our 
+[GitHub.com](https://github.com/) project repository to the UBC JupyterHub. 
 There are other ways to do this (e.g., use the Git command line tools in the 
 terminal on JupyterHub), however we think this is the most user friendly way to 
 introduce this. 
@@ -119,7 +135,7 @@ created and click the blue "CLONE" button:
 include_graphics("img/version_control/clone_02.png")
 ```
 
-On the file browser tab, you will now see a folder for your course repository 
+On the file browser tab, you will now see a folder for your project's repository 
 (and inside it will be all the files that existed on 
 [GitHub.com](https://github.com/)):
 
@@ -129,63 +145,73 @@ include_graphics("img/version_control/clone_03.png")
 
 ## Sending changes you make on JupyterHub back to GitHub
 
-Once you make changes (e.g., create or edit files) in your course repository on 
-JupyterHub, you will need to send them back to the course repository on 
-[GitHub.com](https://github.com/) to be able to share these with your students. 
-We can use the Jupyter lab git extension tool to do this. It is a three stage 
-process which includes: 
+Once you make changes (e.g., create or edit files) in your project repository on 
+JupyterHub, you will need to send them back to the project repository on 
+[GitHub.com](https://github.com/) to be able to share these with your 
+collaborators and audience. Again, we can use the Jupyter lab git extension tool 
+to do this. It is a three stage process which includes: 
 
-1. a `git add` command to flag which modified files you want to send back to the course repository on [GitHub.com](https://github.com/)
-2. a `git commit` command that logs the changes and an associated (useful) message about what was changed
-3. a `git push` command that sends the added and committed changes to the course repository on [GitHub.com](https://github.com/)
+1. Specifying which files to "add" to the staging area. You can think of this as
+a command which flags which modified files you want to send back to the project 
+repository on [GitHub.com](https://github.com/).
+2. Logging the changes to the flagged files on the local machine (which for us 
+is a JupyterHub). This step requires specifying an associated (useful) message 
+about what was changed. This step is called a "commit".
+3. Push the added and committed changes that currently exist locally (i.e., on 
+JupyterHub) to the project repository on [GitHub.com](https://github.com/)
 
-Below we walkthrough how you can use the Jupyter lab git extension tool to do 
+Below we walk-through how you can use the Jupyter lab git extension tool to do 
 each of the steps outlined above.
 
-### `git add` the modified files
+### Specifying which files whose changes you want to commit
 
-Below we created and saved a new file (named `demo-code.ipynb`) that we would 
-like to send back to the course repository on [GitHub.com](https://github.com/). 
-To `git add` this modified file, we click the Jupyter lab git extension icon on 
-the far left-hand side of Jupyter lab:
+Below we created and saved a new file (named `eda.ipynb`) that we would 
+like to send back to the project repository on [GitHub.com](https://github.com/). 
+To "add" this modified file to the staging area (*i.e.*, flagging that this is a
+file whose changes we would like to log), we click the Jupyter lab git extension 
+icon on the far left-hand side of Jupyter lab:
 
 ```{r git_add_01}
 include_graphics("img/version_control/git_add_01.png")
 ```
 
 This opens the Git graphical user interface (GUI) pane, and then we click the 
-plus sign beside the file that we want to `git add`. Note, because this is the 
+plus sign beside the file that we want to "add". Note, because this is the 
 first change for this file that we want to add, it lives under the "Untracked" 
 heading. However, next time we edit this file and want to add the changes we 
 made, we will find it under the "Changed" heading.
 
-> Note: we can ignore the `demo-code-checkpoint.ipynb` file (sometimes called `.ipynb_checkpoints`), as it can be thought of as another type of "back-up" of our Jupyter notebook file we created, and we only need to send the file we directly created and edited to [GitHub.com](https://github.com/).
+> Note: we can ignore the `eda-checkpoint.ipynb` file (sometimes called `.ipynb_checkpoints`), as it can be thought of as another type of "back-up" of 
+our Jupyter notebook file we created, and we only need to send the file we 
+directly created and edited to [GitHub.com](https://github.com/).
 
 ```{r git_add_02}
 include_graphics("img/version_control/git_add_02.png")
 ```
 
 This moves the file from the "Untracked" heading to the "Staged" heading and we 
-are ready to now `git commit` the changes to log them and associate a (useful) 
+are ready to now "commit" the changes to log them and associate a (useful) 
 message about what was changed.
 
 ```{r git_add_03}
 include_graphics("img/version_control/git_add_03.png")
 ```
 
-###`git commit` the changes and an associated (useful) message about what was changed
+### Log the changes and an associated (useful) message about what was changed
 
-To `git commit` the changes and an associated (useful) message about what was 
+To log the changes and an associated (useful) message about what was 
 changed, we put our message in the text box at the bottom of the Git GUI pane 
 and click on the blue "Commit" button. Note: It is highly recommended to make 
 this message useful and relevant to the changes that were made, as this can 
-later be used to peruse the file history and understand how the file evolved.
+later be used to peruse the file history and understand how the file evolved. 
+This is especially useful when you want to go back in time to checkout an older
+version of a file, or state of the project.
 
 ```{r git_commit_01}
 include_graphics("img/version_control/git_commit_01.png")
 ```
 
-After commiting the file, you will see there there are 0 "Staged" files and we 
+After "commiting" the file(s), you will see there there are 0 "Staged" files and we 
 are now ready to push our changes (and the attached commit message) to our 
 course repository on [GitHub.com](https://github.com/):
 
@@ -193,10 +219,10 @@ course repository on [GitHub.com](https://github.com/):
 include_graphics("img/version_control/git_commit_02.png")
 ```
 
-#### 3. `git push` the changes to the course repository on [GitHub.com](https://github.com/)
+#### 3. Pushing the changes to [GitHub.com](https://github.com/)
 
-To send our added and committed the changes to the course repository on 
-[GitHub.com](https://github.com/), we need to `git push`. To do this we click on 
+To send our added and committed the changes to the project repository on 
+[GitHub.com](https://github.com/), we need to "Push" them. To do this we click on 
 the cloud icon with the up arrow on the Git GUI pane:
 
 ```{r git_push_01}
@@ -218,7 +244,7 @@ below. Note: click "Dismiss" to continue working in Jupyter.
 include_graphics("img/version_control/git_push_03.png")
 ```
 
-If you now go to the course repository on [GitHub.com](https://github.com/) you 
+If you now go to the project repository on [GitHub.com](https://github.com/) you 
 will see the changes now exist there!
 
 ```{r git_push_04}
@@ -227,14 +253,12 @@ include_graphics("img/version_control/git_push_04.png")
 
 ## Strategies for collaboration when using version control
 
-### Pulling changes made in our course repository on [GitHub.com](https://github.com/) to JupyterHub
+### Pulling changes from [GitHub.com](https://github.com/)
 
-If you make changes in your course repository on 
-[GitHub.com](https://github.com/) using one of the tools described earlier in 
-this session (e.g., the pen tool, or file create/upload menus) then you will 
-need to `git pull` those changes to the copy of the course repository on 
-JupyterHub to get things in sync. You can do this using the Git GUI pane by 
-clicking on the cloud icon with the down arrow:
+If your collaborators send changes to your project and you want to see and work
+with them locally (i.e., on JupyterHub) then you need to "pull" those changes to 
+the copy of the project repository on JupyterHub to get things in sync. You can 
+do this using the Git GUI pane by clicking on the cloud icon with the down arrow:
 
 ```{r git_pull_01}
 include_graphics("img/version_control/git_pull_01.png")
